# karuna-ai-os

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
agents/: __init__.py  base.py  content.py  factory.py  nutrition.py  registry.py  research.py  review.py  types.py  validation.py
backend/: __init__.py  app.py  dependencies.py  exception_handlers.py  health.py  lifespan.py  middleware.py  router.py  version.py
backend/api/: __init__.py
backend/api/v1/: __init__.py  agents.py  documents.py  presenters.py  router.py  schemas.py  validation.py  workflows.py
config/: __init__.py  constants.py  environment.py  exceptions.py  filesystem.py  logger.py  paths.py  settings.py
docs/: ARCHITECTURE.md  ENGINEERING_STANDARD.md  IMPLEMENTATION_RULES.md  ROADMAP.md  SETUP.md
llm/: __init__.py  base.py  factory.py  gemini_provider.py  groq_provider.py  validation.py
memory/: __init__.py  document.py  metadata.py  repository.py  storage.py  validation.py
scripts/: dev.ps1  test.ps1
tests/: conftest.py  test_agents.py  test_api.py  test_config.py  test_imports.py  test_llm.py  test_memory.py  test_version.py  test_workflows.py
workflows/: __init__.py  builder.py  graph.py  nodes.py  state.py  validation.py
