[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "karuna-ai-os"
version = "0.1.0"
description = "Project foundation for Karuna AI OS, a production-oriented AI operating system backend."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Karuna AI OS Contributors" }
]
keywords = [
    "ai",
    "fastapi",
    "langgraph",
    "llm",
    "backend"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Typing :: Typed"
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "groq>=0.9.0",
    "google-genai>=0.3.0",
    "httpx>=0.27.0",
    "typing-extensions>=4.12.0"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0"
]

[tool.setuptools]
packages = [
    "agents",
    "backend",
    "backend.api",
    "backend.api.v1",
    "config",
    "database",
    "llm",
    "memory",
    "tools",
    "workflows"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP"
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
